fix: bot message alignment fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,14 +8,13 @@
 }
 
 .chatbot-container {
-  width: 90%;
-  max-width: 600px;
-  height: 90%;
-  max-height: 700px;
-  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
   border: 1px solid #ccc;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .react-chatbot-kit-chat-container {
@@ -23,11 +22,6 @@
   width: auto;
 }
 
-.react-chatbot-kit-message {
-  height: auto;
-  width: auto; 
-  max-width: 80%; 
-}
 
 .react-chatbot-kit-message-container {
   display: flex;
@@ -36,21 +30,32 @@
   overflow-y: auto;
 }
 
-.react-chatbot-kit-message.user {
-  align-self: flex-end;
-  background-color: #0084ff;
-  color: white;
-  border-radius: 10px;
+.react-chatbot-kit-chat-bot-message {
   padding: 10px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  color: #fff;
+  font-weight: medium;
+  position: relative;
+  width: 184.5px;
+  margin-right: auto;
+  margin-left: 0; 
+  text-align: left;
 }
 
-.react-chatbot-kit-message.bot {
-  align-self: flex-start;
-  background-color: #e0e0e0;
-  color: black;
-  border-radius: 10px;
+.react-chatbot-kit-chat-user-message {
   padding: 10px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  color: #fff;
+  font-weight: medium;
+  position: relative;
+  width: 184.5px;
+  margin-left: auto;
+  margin-right: 0; 
+  text-align: left;
 }
+
 
 
 .App-logo {
